; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Proto_OpenVPN.c_OvsApplyUdpPortList.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Proto_OpenVPN.c_OvsApplyUdpPortList.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @OvsApplyUdpPortList(%struct.TYPE_5__* %0, i8* %1, i32* %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %11 = icmp eq %struct.TYPE_5__* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %3
  br label %64

13:                                               ; preds = %3
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %15, align 8
  %17 = call i32 @DeleteAllPortFromUdpListener(%struct.TYPE_6__* %16)
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %19, align 8
  %21 = icmp ne %struct.TYPE_6__* %20, null
  br i1 %21, label %22, label %32

22:                                               ; preds = %13
  %23 = load i32*, i32** %6, align 8
  %24 = icmp ne i32* %23, null
  br i1 %24, label %25, label %32

25:                                               ; preds = %22
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 0
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %28, i32 0, i32 0
  %30 = load i32*, i32** %6, align 8
  %31 = call i32 @Copy(i32* %29, i32* %30, i32 4)
  br label %32

32:                                               ; preds = %25, %22, %13
  %33 = load i8*, i8** %5, align 8
  %34 = call i32* @StrToIntList(i8* %33, i32 1)
  store i32* %34, i32** %7, align 8
  store i64 0, i64* %8, align 8
  br label %35

35:                                               ; preds = %58, %32
  %36 = load i64, i64* %8, align 8
  %37 = load i32*, i32** %7, align 8
  %38 = call i64 @LIST_NUM(i32* %37)
  %39 = icmp slt i64 %36, %38
  br i1 %39, label %40, label %61

40:                                               ; preds = %35
  %41 = load i32*, i32** %7, align 8
  %42 = load i64, i64* %8, align 8
  %43 = call i64 @LIST_DATA(i32* %41, i64 %42)
  %44 = inttoptr i64 %43 to i64*
  %45 = load i64, i64* %44, align 8
  store i64 %45, i64* %9, align 8
  %46 = load i64, i64* %9, align 8
  %47 = icmp sge i64 %46, 1
  br i1 %47, label %48, label %57

48:                                               ; preds = %40
  %49 = load i64, i64* %9, align 8
  %50 = icmp sle i64 %49, 65535
  br i1 %50, label %51, label %57

51:                                               ; preds = %48
  %52 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %53 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %52, i32 0, i32 0
  %54 = load %struct.TYPE_6__*, %struct.TYPE_6__** %53, align 8
  %55 = load i64, i64* %9, align 8
  %56 = call i32 @AddPortToUdpListener(%struct.TYPE_6__* %54, i64 %55)
  br label %57

57:                                               ; preds = %51, %48, %40
  br label %58

58:                                               ; preds = %57
  %59 = load i64, i64* %8, align 8
  %60 = add nsw i64 %59, 1
  store i64 %60, i64* %8, align 8
  br label %35

61:                                               ; preds = %35
  %62 = load i32*, i32** %7, align 8
  %63 = call i32 @ReleaseIntList(i32* %62)
  br label %64

64:                                               ; preds = %61, %12
  ret void
}

declare dso_local i32 @DeleteAllPortFromUdpListener(%struct.TYPE_6__*) #1

declare dso_local i32 @Copy(i32*, i32*, i32) #1

declare dso_local i32* @StrToIntList(i8*, i32) #1

declare dso_local i64 @LIST_NUM(i32*) #1

declare dso_local i64 @LIST_DATA(i32*, i64) #1

declare dso_local i32 @AddPortToUdpListener(%struct.TYPE_6__*, i64) #1

declare dso_local i32 @ReleaseIntList(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
